# Portfolio

./: Otchyot_Tema_4_Metody_i_instrumenty_dlya_upravlenia_proektami.doc  README.md
infrotecs тестовое задание/: backup-sql.linux.txt  config.config
Теория принятия решений/: TPR_2_VAR_56_LIM.ipynb  TPR_Z1_LIM_V56.ipynb  tpr_z1_lim_v56.py
алгоритмы и структуры данных/: lim_alg_kur.doc
игры/: pyatnaski.html  saper.html  zmeyka.html
инфокоммуникационные системы и сети/1/: Lobachev_3374.docx
инфокоммуникационные системы и сети/2/: 3374_Lobachev.docx
инфокоммуникационные системы и сети/3/: 3374_Lobachev.docx
инфокоммуникационные системы и сети/4/: 3374_Lobachev.docx
инфокоммуникационные системы и сети/5/: 3374_Lobachev.docx  lab5.py
инфокоммуникационные системы и сети/6.2/: 3374_Lobachev.docx
инфокоммуникационные системы и сети/7.2/: 3374_Lobachev.docx
машинное обучение/1/: 1.txt  LAB1_3374_LIM.ipynb  lab1_3374_lim.py
машинное обучение/2/: LAB2_3374_LIM.ipynb  lab2_3374_lim.py
машинное обучение/3/: LAB3_3374_LIM.ipynb  lab3_3374_lim.py
ооп1-4/1/: application.cpp  array.cpp  array.h
ооп1-4/2/: application.cpp  application.h  array.cpp  number.h
ооп1-4/3/: application.h  array.cpp  array.h  complex.cpp  polynom.cpp  (+1 more)
ооп1-4/4/: CMakeLists.txt  application.cpp  interface.cpp  interface.h  main.cpp  number.h
программирование 1сем/: kursov.cpp  lab1.cpp  lab2.cpp  lab3.cpp
управление данными/: database.py  entities.py  football.db  interface.py  main.py  queries.py  ОТЧЕТ - ПОЯСНИТЕЛЬНАЯ ЗАПИСКА.docx  Отчет выполнения.docx
эвм/: EVM4.CPP
(+105 files in other folders)
